fixed navbar brand overflowing on webkit
Navbar brand were overflowing into another line when rendered on webkit
under sm size (768px - 991px).
This cannot be reproduced when window size was shrinked from larger
width.
`display: table;` seems to be calculated to fit contents in one line
even if contents were floating.

--- a/memodump/css/memodump.css
+++ b/memodump/css/memodump.css
@@ -117,6 +117,7 @@ form.form-search:before {
     background-color: #333;
 }
 .navbar-brand-wrapper { /* workaround for webkit bug */
+    display: table;
     float: left;
 }
 @media screen and (max-width: 767px) {
@@ -125,6 +126,7 @@ form.form-search:before {
     }
     /* workaround for webkit bug */
     .navbar-brand-wrapper {
+        display: block;
         float: none;
         text-align: center;
     }
